--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>pixi.js example 13 - Graphics</title>
+    <title>story</title>
     <script src="bin/pixi.dev.js"></script>
     <link href='style.css' rel='stylesheet' type='text/css' />
 </head>
@@ -18,6 +18,7 @@
 
 </body>
 
+<script src="js/meta.js"></script>
 <script src="js/main.js"></script>
 
 </html>
